# claude-monitor

./: .gitmodules  README.md  Taskfile.yml
app/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/config/: settings.py  urls.py
app/core/: views.py
app/core/templates/core/: index.html
app/templates/: base.html
plans/: 20251213_214249_django-htmx-bootstrap.md
