[project]
name = "claude-monitor"
version = "0.1.0"
description = "Claude Monitor - Django + HTMX application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-htmx>=1.27.0",
    "structlog>=25.5.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
